--- a/DatasLeonardo.ConsoleApp/CelularLeonardo.ConsoleApp.csproj
+++ b/DatasLeonardo.ConsoleApp/CelularLeonardo.ConsoleApp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Celular.cs" />
+    <Compile Include="CelulcarNumeros.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
